test/Fail/Issue7832.err
Issue7832.agda:30.33-37: error: [UnequalTerms]
The terms
  accj₁
and
  accj₂
are not equal at type Acc j
when checking that the expression refl has type
U< accj₁ i i<j₁ ≡ U< accj₂ i i<j₂
